force-app/main/default/objects/cogn__Clean_Job__c/cogn__Clean_Job__c.object-meta.xml
<CustomObject>
    <label>Refresh Stats</label>
    <nameField>
        <label>Clean Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Refresh Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>