force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__Accept_Company_Changes__c.field-meta.xml
<CustomField>
    <fullName>cogn__Accept_Company_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Company Changes</label>
    <type>Checkbox</type>
</CustomField>