force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__cognismHighRisk__c.field-meta.xml
<CustomField>
    <fullName>cogn__cognismHighRisk__c</fullName>
    <label>cognismHighRisk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>