force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__Count_Items__c.field-meta.xml
<CustomField>
    <fullName>cogn__Count_Items__c</fullName>
    <label>Count Items</label>
    <summaryForeignKey>cogn__Clean_Job_Item__c.cogn__Clean_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>