force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__Count_Matched_Fields__c.field-meta.xml
<CustomField>
    <fullName>cogn__Count_Matched_Fields__c</fullName>
    <label>Count Matched Fields</label>
    <summaryFilterItems>
        <field>cogn__Clean_Job_Item__c.cogn__Matched__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>cogn__Clean_Job_Item__c.cogn__Clean_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>