force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__count_Restart_Batch__c.field-meta.xml
<CustomField>
    <fullName>cogn__count_Restart_Batch__c</fullName>
    <defaultValue>0</defaultValue>
    <label>count Restart Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>