force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__emailCount__c.field-meta.xml
<CustomField>
    <fullName>cogn__emailCount__c</fullName>
    <label>emailCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>