force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__highRisk__c.field-meta.xml
<CustomField>
    <fullName>cogn__highRisk__c</fullName>
    <label>highRisk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>