force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__Is_Notification_Been_Sent__c.field-meta.xml
<CustomField>
    <fullName>cogn__Is_Notification_Been_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Notification Been Sent</label>
    <type>Checkbox</type>
</CustomField>