force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__List_Session_Ids__c.field-meta.xml
<CustomField>
    <fullName>cogn__List_Session_Ids__c</fullName>
    <label>List Session Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>