force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__Matched_Records__c.field-meta.xml
<CustomField>
    <fullName>cogn__Matched_Records__c</fullName>
    <label>Matched Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>