force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__Message__c.field-meta.xml
<CustomField>
    <fullName>cogn__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>