force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__Number_of_Sending_Records__c.field-meta.xml
<CustomField>
    <fullName>cogn__Number_of_Sending_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Sending Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>