force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__Session_Id__c.field-meta.xml
<CustomField>
    <fullName>cogn__Session_Id__c</fullName>
    <label>Session Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>