force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__Status__c.field-meta.xml
<CustomField>
    <fullName>cogn__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
                <default>true</default>
                <label>In Queue</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Finish</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Session Creation</fullName>
            </value>
            <value>
                <fullName>Failed Cleaning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>