force-app/main/default/objects/cogn__Clean_Job__c/fields/cogn__TypeClean__c.field-meta.xml
<CustomField>
    <fullName>cogn__TypeClean__c</fullName>
    <label>TypeClean</label>
    <length>255</length>
    <type>Text</type>
</CustomField>