force-app/main/default/objects/cogn__Clean_Job__c/listViews/cogn__All.listView-meta.xml
<ListView>
    <fullName>cogn__All</fullName>
    <columns>NAME</columns>
    <columns>cogn__Status__c</columns>
    <columns>cogn__TypeClean__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>